TEST_PROGRAMS/VALID/05/if_stmt_elif_reg_brace.go
/* If statements */

package main

func main() {

	if z:= true; y {
		println(z)
	} else if z:= true; x {
		println(z)
	}
	
}
