TEST_PROGRAMS/INVALID/03/invalid_print3.go
package main

func f() {

	if x { 

		id = 123;
		println("my id:",a)
		// assigning printed to id
		id = print("a");
	}
}
